# elasticpoll.app

./: .eslintrc  .gitignore  Cargo.toml  README.md  build.rs  build.sh  deny.toml  netlify.toml  package-lock.json  package.json  webpack.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: js.rs  layout.rs  lib.rs  poll.rs  testing.rs  utils.rs
src/components/: about.rs  common.rs  home.rs  mod.rs  new_poll.rs  participants.rs  rollback.rs  secrets.rs  tallying.rs  voting.rs
src/pages/: about.rs  app.rs  home.rs  implementation.rs  mod.rs  new_poll.rs  participants.rs  tallying.rs  voting.rs
src/poll/: managers.rs  mod.rs  participant.rs
tests/integration/: main.rs  poll.rs
tests/integration/pages/: mod.rs  new_poll.rs
webpack/: crypto.js  crypto.test.js  index.html  index.js  main.scss  service-worker.js
webpack/__test__/: EnrichedEnv.js
webpack/scripts/: build-font.js
