[package]
name = "elasticpoll-wasm"
version = "0.0.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Cryptographically secure polling web app"
repository = "https://github.com/slowli/elasticpoll.app"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[package.metadata.wasm-pack.profile.dev]
# This is necessary because webpack does not process long symbols correctly.
# TODO: better way?
wasm-opt = ["--strip-debug", "--enable-mutable-globals"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64ct = { version = "1.6.0", features = ["std"] }
js-sys = "0.3.55"
merlin = "3.0.0"
rand_core = "0.6.3"
secrecy = "0.8.0"
secret-tree = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5.0"
sha2 = "0.10.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ["NodeList", "HtmlButtonElement"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"

# Set up `getrandom` crate to use the host JS CSPRNG.
getrandom = { version = "0.2", features = ["custom"] }

# Direct dependency just to force the choice of the backend.
[dependencies.curve25519-dalek-ng]
version = "4.1.1"
features = ["u64_backend"]

[dependencies.elastic-elgamal]
version = "0.3.0-beta.1"
default-features = false
features = ["std", "curve25519-dalek-ng", "serde"]

[dev-dependencies]
assert_matches = "1.5.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
rand = "0.8.4"
wasm-bindgen-test = "0.3.28"

[build-dependencies]
regex = "1.9.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.2"

[features]
default = []
# Enables functionality necessary for integration testing.
testing = []

[profile.release]
panic = "abort"
codegen-units = 1
opt-level = "z" # Optimize for size, rather than speed
lto = true
